<resources>
    <string name="app_name">CUG校园服务</string>
    <string name="home">主页</string>
    <string name="library">资源</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="serach">搜   索</string>
    <string name="logout">退出登录</string>
    <string name="pulish">内容发布</string>
    <string name="blog_manage">内容管理</string>
    <string name="file_manager">云盘管理</string>
    <string name="user_name">未登录</string>
    <string name="my_collect">我的收藏</string>
    <string name="return_home">个人中心</string>
    <string name="theme_choose">主题选择</string>
    <string name="title_activity_lost_found_detail">LostFoundDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>