<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51CCCCCC"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="18dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <ImageView
            android:id="@+id/user_head"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/user" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/user_head"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#353535"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#353535"
                android:textSize="16sp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/user_head"
            android:text="账号:"
            android:textColor="#AAAAAA"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/dengruyonghu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="55dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/user_head"
            android:textColor="#AAAAAA"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_xiangce"
        android:layout_marginTop="110dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:paddingLeft="12dp">
        <ImageView
            android:id="@+id/iv_xiangce"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/post"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_xiangce"
            android:text="@string/pulish"
            android:textColor="#353535"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_aboutwe"
        android:layout_marginTop="185dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:paddingLeft="12dp">
        <ImageView
            android:id="@+id/iv_shoucang"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/blog"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_shoucang"
            android:text="@string/blog_manage"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="245dp"
        android:id="@+id/re_help"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:paddingLeft="12dp">
        <ImageView
            android:id="@+id/iv_money_bag"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/cloud" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_money_bag"
            android:text="@string/file_manager"
            android:textColor="#353535"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="315dp"
        android:id="@+id/tuichu"
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="60dp"
        android:clickable="true"
        android:paddingLeft="12dp">
        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/logout" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_setting"
            android:text="@string/logout"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botton_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"
        tools:ignore="MissingConstraints" />
</RelativeLayout>
